--- a/index.html
+++ b/index.html
@@ -5,22 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-		<link href="./app/immutable/assets/0.CPgxU6zn.css" rel="stylesheet">
+		<link href="./app/immutable/assets/0.CyfaXb6v.css" rel="stylesheet">
 		<link href="./app/immutable/assets/2.D4pE1Rty.css" rel="stylesheet">
-		<link rel="modulepreload" href="./app/immutable/entry/start.DsD5Ftop.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/entry.CaaRGQAf.js">
+		<link rel="modulepreload" href="./app/immutable/entry/start.DQ6G883Y.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/entry.Csnf3QmV.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/scheduler.NuiSjRKy.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index.CEOvK38H.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/paths.DtDLu-QE.js">
-		<link rel="modulepreload" href="./app/immutable/entry/app.BBI38r5U.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/paths.uxh7UlOZ.js">
+		<link rel="modulepreload" href="./app/immutable/entry/app.DQy1zRzh.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index.DMQv7pK0.js">
-		<link rel="modulepreload" href="./app/immutable/nodes/0.DSlXXKbX.js">
+		<link rel="modulepreload" href="./app/immutable/nodes/0.BjwAWTCl.js">
 		<link rel="modulepreload" href="./app/immutable/nodes/2.CvQ5aMlp.js">
   </head>
 
   <body>
     <a href="#content" class="skip-to-main">Skip to main content</a>
-    <div>  <div class="wrapper svelte-1onjgon"><div class="slide svelte-8qdb4a isVisible"><div class="textcontainer svelte-8qdb4a"><h1 class="svelte-8qdb4a">Global inequality</h1></div> <img src="./assets/1.png" alt="Global inequality" class="svelte-8qdb4a"> <div class="hint text-small svelte-8qdb4a" data-svelte-h="svelte-1xrvdna">scroll down</div> </div> <div class="slide svelte-8qdb4a"><div class="textcontainer svelte-8qdb4a"><h1 class="svelte-8qdb4a">Global inequality</h1></div> <img src="./assets/2.jpeg" alt="Global inequality" class="svelte-8qdb4a"> <div class="hint text-small svelte-8qdb4a" data-svelte-h="svelte-1xrvdna">scroll down</div> </div> </div> <main id="content"><section style="margin: 50px auto" class="svelte-14fsdsj" data-svelte-h="svelte-1d8edop"><p class="text-medium"><a target="_blank" href="https://www.statista.com/statistics/268750/global-gross-domestic-product-gdp/">World production</a> is so high as it has never been before. Humanity itself has reached a level
+    <div>  <div class="wrapper svelte-1onjgon"><div class="slide svelte-1whpnih isVisible"><div class="textcontainer svelte-1whpnih"><h1 class="svelte-1whpnih">Global inequality</h1></div> <img src="./assets/1.png" alt="Global inequality" class="svelte-1whpnih"> <div class="hint text-small svelte-1whpnih" data-svelte-h="svelte-1xrvdna">scroll down</div> </div> <div class="slide svelte-1whpnih"><div class="textcontainer svelte-1whpnih"><h1 class="svelte-1whpnih">Global inequality</h1></div> <img src="./assets/2.jpeg" alt="Global inequality" class="svelte-1whpnih"> <div class="hint text-small svelte-1whpnih" data-svelte-h="svelte-1xrvdna">scroll down</div> </div> </div> <main id="content"><section style="margin: 50px auto" class="svelte-14fsdsj" data-svelte-h="svelte-1d8edop"><p class="text-medium"><a target="_blank" href="https://www.statista.com/statistics/268750/global-gross-domestic-product-gdp/">World production</a> is so high as it has never been before. Humanity itself has reached a level
     of efficiency which could feed the world. Then why are so many people still living
     and dying in poverty?</p> <p class="text-medium">On the other hand in more and more countries facisim is again! on the rise.
     Extreme inquality leads to frustration, fear and anger. These are
@@ -71,7 +71,7 @@
 			
 			<script>
 				{
-					__sveltekit_emljsp = {
+					__sveltekit_eu1mk9 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/sveltekit-github-pages"
 					};
@@ -81,8 +81,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./app/immutable/entry/start.DsD5Ftop.js"),
-						import("./app/immutable/entry/app.BBI38r5U.js")
+						import("./app/immutable/entry/start.DQ6G883Y.js"),
+						import("./app/immutable/entry/app.DQy1zRzh.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
