--- a/index.html
+++ b/index.html
@@ -5,22 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-		<link href="./app/immutable/assets/0.BBgVFSKE.css" rel="stylesheet">
-		<link href="./app/immutable/assets/2.C8X0qpgy.css" rel="stylesheet">
-		<link rel="modulepreload" href="./app/immutable/entry/start.BdHP3o_q.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/entry.C4Loo8AV.js">
+		<link href="./app/immutable/assets/0.C6lNPhnt.css" rel="stylesheet">
+		<link href="./app/immutable/assets/2.C4UmLANC.css" rel="stylesheet">
+		<link rel="modulepreload" href="./app/immutable/entry/start.DyW2GcMw.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/entry.BTdFYUyz.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/scheduler.NuiSjRKy.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index.CEOvK38H.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/paths.CF6C3qVn.js">
-		<link rel="modulepreload" href="./app/immutable/entry/app.BAlm-XD1.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/paths.BkJ5LRQ7.js">
+		<link rel="modulepreload" href="./app/immutable/entry/app.C1vfGl46.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index.DMQv7pK0.js">
-		<link rel="modulepreload" href="./app/immutable/nodes/0.NdLLpPtN.js">
-		<link rel="modulepreload" href="./app/immutable/nodes/2.occzN6n8.js">
+		<link rel="modulepreload" href="./app/immutable/nodes/0.DSlfJ2ZM.js">
+		<link rel="modulepreload" href="./app/immutable/nodes/2.Ci2Rir0u.js">
   </head>
 
   <body>
     <a href="#content" class="skip-to-main">Skip to main content</a>
-    <div>  <div class="wrapper svelte-1onjgon"><div class="slide svelte-1e85pr7 isVisible"><div class="textcontainer svelte-1e85pr7"><h1 class="title svelte-1e85pr7">Global inequality</h1></div> <img src="./assets/1.png" alt="Global inequality" class="svelte-1e85pr7"> <div class="hint text-small svelte-1e85pr7" data-svelte-h="svelte-1xrvdna">scroll down</div> </div> <div class="slide svelte-1e85pr7"><div class="textcontainer svelte-1e85pr7"><h1 class="title svelte-1e85pr7">Global inequality</h1></div> <img src="./assets/2.jpeg" alt="Global inequality" class="svelte-1e85pr7"> <div class="hint text-small svelte-1e85pr7" data-svelte-h="svelte-1xrvdna">scroll down</div> </div> </div> <main id="content"><section style="margin: 50px auto" class="svelte-14fsdsj" data-svelte-h="svelte-1d8edop"><p class="text-medium"><a target="_blank" href="https://www.statista.com/statistics/268750/global-gross-domestic-product-gdp/">World production</a> is so high as it has never been before. Humanity itself has reached a level
+    <div>  <div class="wrapper svelte-1onjgon"><div class="slide svelte-16yadvx isVisible"><div class="textcontainer svelte-16yadvx"><h1 class="title svelte-16yadvx">Global inequality</h1></div> <img src="./assets/1.png" alt="Global inequality" class="svelte-16yadvx"> <div class="hint text-small svelte-16yadvx" data-svelte-h="svelte-1xrvdna">scroll down</div> </div> <div class="slide svelte-16yadvx"><div class="textcontainer svelte-16yadvx"><h1 class="title svelte-16yadvx">Global inequality</h1></div> <img src="./assets/2.jpeg" alt="Global inequality" class="svelte-16yadvx"> <div class="hint text-small svelte-16yadvx" data-svelte-h="svelte-1xrvdna">scroll down</div> </div> </div> <main id="content"><section style="margin: 50px auto" class="svelte-14fsdsj" data-svelte-h="svelte-1d8edop"><p class="text-medium"><a target="_blank" href="https://www.statista.com/statistics/268750/global-gross-domestic-product-gdp/">World production</a> is so high as it has never been before. Humanity itself has reached a level
     of efficiency which could feed the world. Then why are so many people still living
     and dying in poverty?</p> <p class="text-medium">On the other hand in more and more countries facisim is again! on the rise.
     Extreme inquality leads to frustration, fear and anger. These are
@@ -56,7 +56,7 @@
 						after the fall of the Berlin wall.<!-- HTML_TAG_END --></p> </div></div> </div></div></div></div></div> </section></div> <section class="svelte-14fsdsj" data-svelte-h="svelte-9etk0q"><h3 class="text-big">Hello hello</h3> <p class="text-medium">On the other hand in more and more countries facisim is again! on the rise.
     Extreme inquality leads to frustration, fear and anger. These are
     observations and questions that motivated us to create this project on
-    global income inquality.</p></section> <section class="wide svelte-14fsdsj" data-svelte-h="svelte-2dy9ge"> </section> <section class="svelte-14fsdsj" data-svelte-h="svelte-1fs00kg"> <p class="text-small">Methodology</p> <p class="text-small">Income data was sourced from the <a target="_blank" href="https://wid.world/wid-world/">World Inequality Database</a> (WID). It aims to provide open and convenient access to the most extensive
+    global income inquality.</p></section> <section class="svelte-14fsdsj" data-svelte-h="svelte-slqxl1"><p class="text-small">Methodology</p> <p class="text-small">Income data was sourced from the <a target="_blank" href="https://wid.world/wid-world/">World Inequality Database</a> (WID). It aims to provide open and convenient access to the most extensive
       available database on the historical evolution of the world distribution of
       income and wealth, both within countries and between countries. The WID combines
       different data sources: national accounts, survey data, fiscal data, and wealth
@@ -71,7 +71,7 @@
 			
 			<script>
 				{
-					__sveltekit_irpbgx = {
+					__sveltekit_xii9y7 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/sveltekit-github-pages"
 					};
@@ -81,8 +81,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./app/immutable/entry/start.BdHP3o_q.js"),
-						import("./app/immutable/entry/app.BAlm-XD1.js")
+						import("./app/immutable/entry/start.DyW2GcMw.js"),
+						import("./app/immutable/entry/app.C1vfGl46.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
