--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
 		<link href="./app/immutable/assets/0.C6lNPhnt.css" rel="stylesheet">
-		<link href="./app/immutable/assets/2.C4UmLANC.css" rel="stylesheet">
-		<link rel="modulepreload" href="./app/immutable/entry/start.DyW2GcMw.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/entry.BTdFYUyz.js">
+		<link href="./app/immutable/assets/2.BJTP55PI.css" rel="stylesheet">
+		<link rel="modulepreload" href="./app/immutable/entry/start.Cupgq_qA.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/entry.us9cxjsF.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/scheduler.NuiSjRKy.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index.CEOvK38H.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/paths.BkJ5LRQ7.js">
-		<link rel="modulepreload" href="./app/immutable/entry/app.C1vfGl46.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/paths.ClpGJVdo.js">
+		<link rel="modulepreload" href="./app/immutable/entry/app.Po68Lwd5.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index.DMQv7pK0.js">
-		<link rel="modulepreload" href="./app/immutable/nodes/0.DSlfJ2ZM.js">
-		<link rel="modulepreload" href="./app/immutable/nodes/2.Ci2Rir0u.js">
+		<link rel="modulepreload" href="./app/immutable/nodes/0.2rjQ24ud.js">
+		<link rel="modulepreload" href="./app/immutable/nodes/2.CY4LrxMZ.js">
   </head>
 
   <body>
@@ -71,7 +71,7 @@
 			
 			<script>
 				{
-					__sveltekit_xii9y7 = {
+					__sveltekit_13spd9w = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/sveltekit-github-pages"
 					};
@@ -81,8 +81,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./app/immutable/entry/start.DyW2GcMw.js"),
-						import("./app/immutable/entry/app.C1vfGl46.js")
+						import("./app/immutable/entry/start.Cupgq_qA.js"),
+						import("./app/immutable/entry/app.Po68Lwd5.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
