--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-		<link href="./app/immutable/assets/0.C6lNPhnt.css" rel="stylesheet">
-		<link href="./app/immutable/assets/2.CBFAV8Yo.css" rel="stylesheet">
-		<link rel="modulepreload" href="./app/immutable/entry/start.87VeoEDd.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/entry.Co6L4LVT.js">
+		<link href="./app/immutable/assets/0.BWHPegdH.css" rel="stylesheet">
+		<link href="./app/immutable/assets/2.C4UmLANC.css" rel="stylesheet">
+		<link rel="modulepreload" href="./app/immutable/entry/start.CYNZHZYS.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/entry.C0iFVr9r.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/scheduler.NuiSjRKy.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index.CEOvK38H.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/paths.CDu9BSO-.js">
-		<link rel="modulepreload" href="./app/immutable/entry/app.y7MRCSw3.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/paths.4H20Vnu2.js">
+		<link rel="modulepreload" href="./app/immutable/entry/app.h9AdKMKb.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index.DMQv7pK0.js">
-		<link rel="modulepreload" href="./app/immutable/nodes/0.CLYjcm1r.js">
-		<link rel="modulepreload" href="./app/immutable/nodes/2.vMZAuZ_f.js">
+		<link rel="modulepreload" href="./app/immutable/nodes/0.CdE31yrF.js">
+		<link rel="modulepreload" href="./app/immutable/nodes/2.BCHYin5I.js">
   </head>
 
   <body>
@@ -40,23 +40,7 @@
     global income inquality.On the other hand in more and more countries facisim is again! on the rise.
     Extreme inquality leads to frustration, fear and anger. These are
     observations and questions that motivated us to create this project on
-    global income inquality.</p></section> <div style="margin-top: calc((-100vh + 500px)/2)"> <section class="svelte-17v4gyp  wide"><div class="container svelte-17v4gyp"><div class="chart-container svelte-17v4gyp"><div class="chart svelte-17v4gyp sticky"><div class="chartComponent svelte-17v4gyp">  <div style="height: 500px; width: 100%;"></div> </div></div> <div class="steps svelte-17v4gyp"><div><div class="step svelte-17v4gyp active"><div class="contentwrapper svelte-17v4gyp"><div class="contentbackground svelte-17v4gyp"></div> <div class="content svelte-17v4gyp"><h4 class="svelte-17v4gyp">The income gap grows</h4> <p class="text-medium"><!-- HTML_TAG_START -->The USA is a good case where the 
-						<span style='background: #ff4d4d; color: #fff; padding: 2px 4px; margin: 0 2px;'>top 10%</span> 
-						have massively increased their portion of the total wealth compared to the 
-						<span style='background: #4da6ff; color: #fff; padding: 2px 4px; margin: 0 2px; white-space: nowrap;'>lower 50%</span>
-						of the population.<!-- HTML_TAG_END --></p> </div></div> </div><div class="step svelte-17v4gyp"><div class="contentwrapper svelte-17v4gyp"><div class="contentbackground svelte-17v4gyp"></div> <div class="content svelte-17v4gyp"><h4 class="svelte-17v4gyp">The financial effects</h4> <p class="text-medium"><!-- HTML_TAG_START -->In Sweden the 
-						<span style='background: #ff4d4d; color: #fff; padding: 2px 4px; margin: 0 2px;'>top 10%</span> 
-						have switched places with the 
-						<span style='background: #4da6ff; color: #fff; padding: 2px 4px; margin: 0 2px;'>lower 50%</span>
-						during the housinig and banking crisis of 1990-1994, the dot-com bubble of 2000 and the global financial crisis of 2009.<!-- HTML_TAG_END --></p> </div></div> </div><div class="step svelte-17v4gyp"><div class="contentwrapper svelte-17v4gyp"><div class="contentbackground svelte-17v4gyp"></div> <div class="content svelte-17v4gyp"><h4 class="svelte-17v4gyp">Political effects</h4> <p class="text-medium"><!-- HTML_TAG_START -->Germany saw a COVID effect with large spending to keep people working. Here the difference between the
-						<span style='background: #ff4d4d; color: #fff; padding: 2px 4px; margin: 0 2px;'>top 10%</span> 
-						and the
-						<span style='background: #4da6ff; color: #fff; padding: 2px 4px; margin: 0 2px;'>lower 50%</span>
-						have decresed since the pandemic. The same, but smaller happend after the re-unification of East and West Germany in the 1990s
-						after the fall of the Berlin wall.<!-- HTML_TAG_END --></p> </div></div> </div></div></div></div></div> </section></div> <section class="svelte-14fsdsj" data-svelte-h="svelte-9etk0q"><h3 class="text-big">Hello hello</h3> <p class="text-medium">On the other hand in more and more countries facisim is again! on the rise.
-    Extreme inquality leads to frustration, fear and anger. These are
-    observations and questions that motivated us to create this project on
-    global income inquality.</p></section> <section class="svelte-14fsdsj" data-svelte-h="svelte-slqxl1"><p class="text-small">Methodology</p> <p class="text-small">Income data was sourced from the <a target="_blank" href="https://wid.world/wid-world/">World Inequality Database</a> (WID). It aims to provide open and convenient access to the most extensive
+    global income inquality.</p></section>   <section class="svelte-14fsdsj" data-svelte-h="svelte-slqxl1"><p class="text-small">Methodology</p> <p class="text-small">Income data was sourced from the <a target="_blank" href="https://wid.world/wid-world/">World Inequality Database</a> (WID). It aims to provide open and convenient access to the most extensive
       available database on the historical evolution of the world distribution of
       income and wealth, both within countries and between countries. The WID combines
       different data sources: national accounts, survey data, fiscal data, and wealth
@@ -65,13 +49,11 @@
       benefits (17% of national income on average) and unemployment and disability
       benefits (1.7%), minus the social contributions that pay for them. Contributions
       and transfers are generally observed in survey data and can therefore be directly
-      removed from or added to individual factor incomes.</p> </section></main> <footer class="svelte-1d65tx1"><div class="content svelte-1d65tx1"><div class="faded svelte-1d65tx1" data-svelte-h="svelte-11hakfr">Made by</div> <div class="svelte-1d65tx1"><span class="svelte-1d65tx1" data-svelte-h="svelte-1tao7rz"> <a href="https://www.sandraviz.com/" target="_blank" class="svelte-1d65tx1">Sandra</a>
-        and
-        <a href="https://www.linkedin.com/in/patrickwojda/" target="_blank" class="svelte-1d65tx1">Patrick</a></span></div></div> </footer>  
+      removed from or added to individual factor incomes.</p> </section></main> <footer></footer>  
 			
 			<script>
 				{
-					__sveltekit_10bsh25 = {
+					__sveltekit_19n03az = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/sveltekit-github-pages"
 					};
@@ -81,8 +63,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./app/immutable/entry/start.87VeoEDd.js"),
-						import("./app/immutable/entry/app.y7MRCSw3.js")
+						import("./app/immutable/entry/start.CYNZHZYS.js"),
+						import("./app/immutable/entry/app.h9AdKMKb.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
