--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     
 		<link href="./app/immutable/assets/0.UayVtUeZ.css" rel="stylesheet">
 		<link href="./app/immutable/assets/2.DHzuzCIY.css" rel="stylesheet">
-		<link rel="modulepreload" href="./app/immutable/entry/start.D8alnbIy.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/entry.DUrLH4vj.js">
+		<link rel="modulepreload" href="./app/immutable/entry/start.Cwo3YfdM.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/entry.BxK6oasd.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/scheduler.NuiSjRKy.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index.CEOvK38H.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/paths.CuBUnmry.js">
-		<link rel="modulepreload" href="./app/immutable/entry/app.DIUsMhJB.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/paths.Cs4FTOAw.js">
+		<link rel="modulepreload" href="./app/immutable/entry/app.CKuCZa4l.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index.DMQv7pK0.js">
-		<link rel="modulepreload" href="./app/immutable/nodes/0.CpGfsPOc.js">
+		<link rel="modulepreload" href="./app/immutable/nodes/0.BGsnclo7.js">
 		<link rel="modulepreload" href="./app/immutable/nodes/2.DuhhT0WN.js">
   </head>
 
@@ -39,7 +39,7 @@
 			
 			<script>
 				{
-					__sveltekit_1ywmrti = {
+					__sveltekit_m5ddaq = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/sveltekit-github-pages"
 					};
@@ -49,8 +49,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./app/immutable/entry/start.D8alnbIy.js"),
-						import("./app/immutable/entry/app.DIUsMhJB.js")
+						import("./app/immutable/entry/start.Cwo3YfdM.js"),
+						import("./app/immutable/entry/app.CKuCZa4l.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
