--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
     
 		<link href="./app/immutable/assets/0.CPJ0ZNbK.css" rel="stylesheet">
 		<link href="./app/immutable/assets/2.-Sp4-b5m.css" rel="stylesheet">
-		<link rel="modulepreload" href="./app/immutable/entry/start.kastyCRJ.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/entry.DS_q0P1C.js">
+		<link rel="modulepreload" href="./app/immutable/entry/start.8twUb00M.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/entry.CDGLaQMN.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/scheduler.NuiSjRKy.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index.CEOvK38H.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/paths.DXwODEUC.js">
-		<link rel="modulepreload" href="./app/immutable/entry/app.C1Ao5Lph.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/paths.IMkzjYM_.js">
+		<link rel="modulepreload" href="./app/immutable/entry/app.D_CZbUqq.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index.DMQv7pK0.js">
-		<link rel="modulepreload" href="./app/immutable/nodes/0.VjBtK31q.js">
-		<link rel="modulepreload" href="./app/immutable/nodes/2.CrjRwCqf.js">
+		<link rel="modulepreload" href="./app/immutable/nodes/0.CmyfLfMK.js">
+		<link rel="modulepreload" href="./app/immutable/nodes/2.CVJDatcm.js">
   </head>
 
   <body>
@@ -38,7 +38,7 @@
 			
 			<script>
 				{
-					__sveltekit_u175ub = {
+					__sveltekit_1u37915 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/sveltekit-github-pages"
 					};
@@ -48,8 +48,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./app/immutable/entry/start.kastyCRJ.js"),
-						import("./app/immutable/entry/app.C1Ao5Lph.js")
+						import("./app/immutable/entry/start.8twUb00M.js"),
+						import("./app/immutable/entry/app.D_CZbUqq.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
