--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-		<link href="./app/immutable/assets/0.CEZ57t4Z.css" rel="stylesheet">
-		<link href="./app/immutable/assets/2.CBsV9OEv.css" rel="stylesheet">
-		<link rel="modulepreload" href="./app/immutable/entry/start.LXxeKf45.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/entry.DVIbPndT.js">
+		<link href="./app/immutable/assets/0.Cgz2EE_Z.css" rel="stylesheet">
+		<link href="./app/immutable/assets/2.CCjEQzxH.css" rel="stylesheet">
+		<link rel="modulepreload" href="./app/immutable/entry/start.BbjyQbTf.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/entry.DkoXDW_T.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/scheduler.NuiSjRKy.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index.CEOvK38H.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/paths.BSyl8xR9.js">
-		<link rel="modulepreload" href="./app/immutable/entry/app.JMsxdjC5.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/paths.NekOOm03.js">
+		<link rel="modulepreload" href="./app/immutable/entry/app.FsHHZR0M.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index.DMQv7pK0.js">
-		<link rel="modulepreload" href="./app/immutable/nodes/0.BnheKWrL.js">
-		<link rel="modulepreload" href="./app/immutable/nodes/2.jyyIh22V.js">
+		<link rel="modulepreload" href="./app/immutable/nodes/0.DD6pz0Qh.js">
+		<link rel="modulepreload" href="./app/immutable/nodes/2.BIQ6yqb0.js">
   </head>
 
   <body>
@@ -41,7 +41,7 @@
 			
 			<script>
 				{
-					__sveltekit_14k6zdl = {
+					__sveltekit_1m3j11t = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/sveltekit-github-pages"
 					};
@@ -51,8 +51,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./app/immutable/entry/start.LXxeKf45.js"),
-						import("./app/immutable/entry/app.JMsxdjC5.js")
+						import("./app/immutable/entry/start.BbjyQbTf.js"),
+						import("./app/immutable/entry/app.FsHHZR0M.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
