--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-		<link href="./app/immutable/assets/0.CfGYBNbs.css" rel="stylesheet">
+		<link href="./app/immutable/assets/0.CRiATPj1.css" rel="stylesheet">
 		<link href="./app/immutable/assets/2.DGpDqvG4.css" rel="stylesheet">
-		<link rel="modulepreload" href="./app/immutable/entry/start.CQxrd_Ze.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/entry._IzlcTdR.js">
+		<link rel="modulepreload" href="./app/immutable/entry/start.0SL9Oh-w.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/entry.YgtAXKkC.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/scheduler.NuiSjRKy.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index.CEOvK38H.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/paths.CuXjPerx.js">
-		<link rel="modulepreload" href="./app/immutable/entry/app.BRmbJl4f.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/paths.Cv-4UxAQ.js">
+		<link rel="modulepreload" href="./app/immutable/entry/app.DPJT2p5W.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index.chByugDZ.js">
-		<link rel="modulepreload" href="./app/immutable/nodes/0.DKMKoIg9.js">
+		<link rel="modulepreload" href="./app/immutable/nodes/0.UDRYfsne.js">
 		<link rel="modulepreload" href="./app/immutable/nodes/2.MirgiV8T.js">
   </head>
 
   <body>
-    <div>  <div class="wrapper svelte-1onjgon"><div class="slide svelte-1l3miq2 isVisible"><div class="textcontainer svelte-1l3miq2"><h3 class="title svelte-1l3miq2">Global inequality</h3> <p class="subtitle svelte-1l3miq2">An interactive data-story tracing how inequality has shifted across countries and over time</p></div> <img src="./assets/1.png" alt="Global inequality" class="svelte-1l3miq2"> </div> <div class="slide svelte-1l3miq2"><div class="textcontainer svelte-1l3miq2"><h3 class="title svelte-1l3miq2">Global inequality</h3> <p class="subtitle svelte-1l3miq2">An interactive data-story tracing how inequality has shifted across countries and over time</p></div> <img src="./assets/2.jpeg" alt="Global inequality" class="svelte-1l3miq2"> </div> </div> <main id="content"><section class="svelte-191jqo9" data-svelte-h="svelte-1s24p5x"><p class="text-medium"><a target="_blank" href="https://www.statista.com/statistics/268750/global-gross-domestic-product-gdp/">Today humanity produces more than ever before</a> enough to feed and sustain the entire planet. 
+    <div>  <div class="wrapper svelte-1onjgon"><div class="slide svelte-b7z3bb isVisible"><div class="textcontainer svelte-b7z3bb"><h3 class="title svelte-b7z3bb">Global inequality</h3> <p class="subtitle svelte-b7z3bb">An interactive data-story tracing how inequality has shifted across countries and over time</p></div> <img src="./assets/1.png" alt="Global inequality" class="svelte-b7z3bb"> </div> <div class="slide svelte-b7z3bb"><div class="textcontainer svelte-b7z3bb"><h3 class="title svelte-b7z3bb">Global inequality</h3> <p class="subtitle svelte-b7z3bb">An interactive data-story tracing how inequality has shifted across countries and over time</p></div> <img src="./assets/2.jpeg" alt="Global inequality" class="svelte-b7z3bb"> </div> </div> <main id="content"><section class="svelte-191jqo9" data-svelte-h="svelte-1s24p5x"><p class="text-medium"><a target="_blank" href="https://www.statista.com/statistics/268750/global-gross-domestic-product-gdp/">Today humanity produces more than ever before</a> enough to feed and sustain the entire planet. 
     Yet millions still live and die in poverty.</p> <p class="text-medium">If such abundance coexists with such deprivation, the problem cannot be production itself,
     but the way its benefits are shared a way that is far from equal.</p> <p class="text-medium">Global inequality remains deeply entrenched, 
    reflecting a world economy that is profoundly hierarchical.  
@@ -57,7 +57,7 @@
 			
 			<script>
 				{
-					__sveltekit_1oh53j2 = {
+					__sveltekit_14d63ir = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/sveltekit-github-pages"
 					};
@@ -67,8 +67,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./app/immutable/entry/start.CQxrd_Ze.js"),
-						import("./app/immutable/entry/app.BRmbJl4f.js")
+						import("./app/immutable/entry/start.0SL9Oh-w.js"),
+						import("./app/immutable/entry/app.DPJT2p5W.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
