--- a/index.html
+++ b/index.html
@@ -5,22 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-		<link href="./app/immutable/assets/0.BfS-6jaY.css" rel="stylesheet">
+		<link href="./app/immutable/assets/0.DtbdL7rg.css" rel="stylesheet">
 		<link href="./app/immutable/assets/2.Br6H2vLH.css" rel="stylesheet">
-		<link rel="modulepreload" href="./app/immutable/entry/start.CS5WDWlz.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/entry.BwCMx_t0.js">
+		<link rel="modulepreload" href="./app/immutable/entry/start.DynHCqDF.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/entry.Dxltz-2h.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/scheduler.BUibCGb-.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index.C8l-n8MR.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/paths.CxtaLcwh.js">
-		<link rel="modulepreload" href="./app/immutable/entry/app.BhyipNRu.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/paths.DM9lCZ-V.js">
+		<link rel="modulepreload" href="./app/immutable/entry/app.VwxZE0Sn.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index.BCycneuu.js">
-		<link rel="modulepreload" href="./app/immutable/nodes/0.BF9WQovf.js">
+		<link rel="modulepreload" href="./app/immutable/nodes/0.CUpM-Ff4.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/Icon.B9zHo-Ew.js">
-		<link rel="modulepreload" href="./app/immutable/nodes/2.DpQM9no5.js">
+		<link rel="modulepreload" href="./app/immutable/nodes/2.D6DGNKfl.js">
   </head>
 
   <body>
-    <div>  <div class="wrapper svelte-1onjgon"><div class="slide svelte-1uym473 isVisible"><div class="textcontainer svelte-1uym473"><h3 class="title svelte-1uym473">Global inequality</h3> <p class="subtitle svelte-1uym473"></p> <p class="credits svelte-1uym473"></p></div> <img src="./assets/1.png" alt="Global inequality" class="svelte-1uym473"> <div class="scroll-indicator svelte-1uym473" data-svelte-h="svelte-m66n02"><span class="scroll-text svelte-1uym473">scroll down</span> <svg class="chevron svelte-1uym473" width="14" height="14" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M6 9L12 15L18 9" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path></svg></div> </div> <div class="slide svelte-1uym473"><div class="textcontainer svelte-1uym473"><h3 class="title svelte-1uym473">Global inequality</h3> <p class="subtitle svelte-1uym473"></p> <p class="credits svelte-1uym473"></p></div> <img src="./assets/2.jpeg" alt="Global inequality" class="svelte-1uym473"> <div class="scroll-indicator svelte-1uym473" data-svelte-h="svelte-m66n02"><span class="scroll-text svelte-1uym473">scroll down</span> <svg class="chevron svelte-1uym473" width="14" height="14" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M6 9L12 15L18 9" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path></svg></div> </div> </div> <main id="content" class="svelte-1giw7zz"><section class="svelte-kza1zj"><p class="text-body svelte-kza1zj"><svg xmlns="http://www.w3.org/2000/svg" width="1.2em" height="1.2em" viewBox="0 0 24 24" fill="none" stroke="#1CB0BA" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" display="block" class="lucide-icon lucide lucide-heart"><path d="M19 14c1.49-1.46 3-3.21 3-5.5A5.5 5.5 0 0 0 16.5 3c-1.76 0-3 .5-4.5 2-1.5-1.5-2.74-2-4.5-2A5.5 5.5 0 0 0 2 8.5c0 2.3 1.5 4.05 3 5.5l7 7Z"></path></svg> <a target="_blank" href="https://www.statista.com/statistics/268750/global-gross-domestic-product-gdp/" data-svelte-h="svelte-uhb1p6">Today humanity produces more goods and services</a>
+    <div>  <div class="wrapper svelte-1onjgon"><div class="slide svelte-1rczunz isVisible"><div class="textcontainer svelte-1rczunz"><h3 class="title svelte-1rczunz">Global inequality</h3> <p class="subtitle svelte-1rczunz"></p> <p class="subtitle2 svelte-1rczunz"></p> <p class="credits svelte-1rczunz"></p></div> <img src="./assets/1.png" alt="Global inequality" class="svelte-1rczunz"> <div class="scroll-indicator svelte-1rczunz" data-svelte-h="svelte-m66n02"><span class="scroll-text svelte-1rczunz">scroll down</span> <svg class="chevron svelte-1rczunz" width="14" height="14" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M6 9L12 15L18 9" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path></svg></div> </div> <div class="slide svelte-1rczunz"><div class="textcontainer svelte-1rczunz"><h3 class="title svelte-1rczunz">Global inequality</h3> <p class="subtitle svelte-1rczunz"></p> <p class="subtitle2 svelte-1rczunz"></p> <p class="credits svelte-1rczunz"></p></div> <img src="./assets/2.jpeg" alt="Global inequality" class="svelte-1rczunz"> <div class="scroll-indicator svelte-1rczunz" data-svelte-h="svelte-m66n02"><span class="scroll-text svelte-1rczunz">scroll down</span> <svg class="chevron svelte-1rczunz" width="14" height="14" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M6 9L12 15L18 9" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path></svg></div> </div> </div> <main id="content" class="svelte-1giw7zz"><section class="svelte-kza1zj"><p class="text-body svelte-kza1zj"><svg xmlns="http://www.w3.org/2000/svg" width="1.2em" height="1.2em" viewBox="0 0 24 24" fill="none" stroke="#1CB0BA" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" display="block" class="lucide-icon lucide lucide-heart"><path d="M19 14c1.49-1.46 3-3.21 3-5.5A5.5 5.5 0 0 0 16.5 3c-1.76 0-3 .5-4.5 2-1.5-1.5-2.74-2-4.5-2A5.5 5.5 0 0 0 2 8.5c0 2.3 1.5 4.05 3 5.5l7 7Z"></path></svg> <a target="_blank" href="https://www.statista.com/statistics/268750/global-gross-domestic-product-gdp/" data-svelte-h="svelte-uhb1p6">Today humanity produces more goods and services</a>
     than ever before in history, enough to feed and sustain the entire world.</p> <p class="text-body svelte-kza1zj"><svg xmlns="http://www.w3.org/2000/svg" width="1.2em" height="1.2em" viewBox="0 0 24 24" fill="none" stroke="#1CB0BA" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" display="block" class="lucide-icon lucide lucide-heart-crack"><path d="M19 14c1.49-1.46 3-3.21 3-5.5A5.5 5.5 0 0 0 16.5 3c-1.76 0-3 .5-4.5 2-1.5-1.5-2.74-2-4.5-2A5.5 5.5 0 0 0 2 8.5c0 2.3 1.5 4.05 3 5.5l7 7Z"></path><path d="m12 13-1-1 2-2-3-3 2-2"></path></svg>
     Yet millions still live and die in poverty.</p> <p class="text-body svelte-kza1zj"><svg xmlns="http://www.w3.org/2000/svg" width="1.2em" height="1.2em" viewBox="0 0 24 24" fill="none" stroke="#1CB0BA" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" display="block" class="lucide-icon lucide lucide-equal-not"><line x1="5" x2="19" y1="9" y2="9"></line><line x1="5" x2="19" y1="15" y2="15"></line><line x1="19" x2="5" y1="5" y2="19"></line></svg>
     If such abundance coexists with such deprivation, the problem isn&#39;t production,
@@ -68,7 +68,7 @@
       >Capital in the Twenty-First Century by Justin Pemberton
     </a></span>
         <!-- HTML_TAG_END --></p> <p class="card-body svelte-gj2ykp"><!-- HTML_TAG_START --><!-- HTML_TAG_END --></p> </div></div> </div><div class="step svelte-gj2ykp"><div class="contentwrapper svelte-gj2ykp"><div class="contentbackground svelte-gj2ykp"></div> <div class="content svelte-gj2ykp"><p class="card-title svelte-gj2ykp">Where are we heading?</p> <p class="card-body svelte-gj2ykp"><!-- HTML_TAG_START -->A rather negative continution of this development might look like...<!-- HTML_TAG_END --></p> <p class="card-body svelte-gj2ykp"><!-- HTML_TAG_START -->
-          <video controls poster="assets/videos/China_2.jpeg" width="100%">
+          <video controls poster="assets/videos/Negative_outcome.jpg" width="100%">
             <source src="assets/videos/Negative_outcome.mp4" type="video/mp4" />
           </video> <span class="text-extra-small"> Source:  <a
       target="_blank"
@@ -101,7 +101,7 @@
 			
 			<script>
 				{
-					__sveltekit_1cco4gj = {
+					__sveltekit_1wcodkr = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/GLOBAL-INEQUALITY-STORY"
 					};
@@ -111,8 +111,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./app/immutable/entry/start.CS5WDWlz.js"),
-						import("./app/immutable/entry/app.BhyipNRu.js")
+						import("./app/immutable/entry/start.DynHCqDF.js"),
+						import("./app/immutable/entry/app.VwxZE0Sn.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
