--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
     
 		<link href="./app/immutable/assets/0.DeUTcQQn.css" rel="stylesheet">
 		<link href="./app/immutable/assets/2.Br6H2vLH.css" rel="stylesheet">
-		<link rel="modulepreload" href="./app/immutable/entry/start.CIe_k5ZA.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/entry.Dw5ueQFe.js">
+		<link rel="modulepreload" href="./app/immutable/entry/start.DRcTAQ0o.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/entry.CG8taOEn.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/scheduler.BUibCGb-.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index.C8l-n8MR.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/paths.k1QJnpCK.js">
-		<link rel="modulepreload" href="./app/immutable/entry/app.B5TuEm7K.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/paths.BR6orvSI.js">
+		<link rel="modulepreload" href="./app/immutable/entry/app.BJ-r-8p_.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index.BCycneuu.js">
-		<link rel="modulepreload" href="./app/immutable/nodes/0.DmvR1lR4.js">
+		<link rel="modulepreload" href="./app/immutable/nodes/0.B0arpP9u.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/Icon.B9zHo-Ew.js">
-		<link rel="modulepreload" href="./app/immutable/nodes/2.D0bfyhzh.js">
+		<link rel="modulepreload" href="./app/immutable/nodes/2.BZDVdy-V.js">
   </head>
 
   <body>
@@ -75,11 +75,11 @@
       href="https://www.imdb.com/title/tt5723056/"
       >Capital in the 21st Century (2019) by Justin Pemberton
     </a></span>
-        <!-- HTML_TAG_END --></p> <p class="card-body svelte-gj2ykp"><!-- HTML_TAG_START --><!-- HTML_TAG_END --></p> </div></div> </div></div></div></div></div> </section> <section class="svelte-kza1zj"><p class="text-body svelte-kza1zj"><svg xmlns="http://www.w3.org/2000/svg" width="1.2em" height="1.2em" viewBox="0 0 24 24" fill="none" stroke="#1CB0BA" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" display="block" class="lucide-icon lucide lucide-smile"><circle cx="12" cy="12" r="10"></circle><path d="M8 14s1.5 2 4 2 4-2 4-2"></path><line x1="9" x2="9.01" y1="9" y2="9"></line><line x1="15" x2="15.01" y1="9" y2="9"></line></svg>
+        <!-- HTML_TAG_END --></p> <p class="card-body svelte-gj2ykp"><!-- HTML_TAG_START --><!-- HTML_TAG_END --></p> </div></div> </div></div></div></div></div> </section> <section class="svelte-kza1zj"><p class="text-body svelte-kza1zj"><svg xmlns="http://www.w3.org/2000/svg" width="1.2em" height="1.2em" viewBox="0 0 24 24" fill="none" stroke="#1CB0BA" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" display="block" class="lucide-icon lucide lucide-frown"><circle cx="12" cy="12" r="10"></circle><path d="M16 16s-1.5-2-4-2-4 2-4 2"></path><line x1="9" x2="9.01" y1="9" y2="9"></line><line x1="15" x2="15.01" y1="9" y2="9"></line></svg>
     Looking at all these charts and noticing a clear tendency toward extreme inequality
     in many parts of the world can leave someone feeling hopeless and worried about
-    our future. We often hear expressions like ‘history repeats itself.’ But as Thomas
-    Piketty pointed out in the documentary, sometimes looking back at history is
+    our future. We often hear expressions like ‘history repeats itself.’</p> <p class="text-body svelte-kza1zj"><svg xmlns="http://www.w3.org/2000/svg" width="1.2em" height="1.2em" viewBox="0 0 24 24" fill="none" stroke="#1CB0BA" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" display="block" class="lucide-icon lucide lucide-smile"><circle cx="12" cy="12" r="10"></circle><path d="M8 14s1.5 2 4 2 4-2 4-2"></path><line x1="9" x2="9.01" y1="9" y2="9"></line><line x1="15" x2="15.01" y1="9" y2="9"></line></svg>
+    But as Thomas Piketty pointed out in the documentary, sometimes looking back at history is
     exactly what can give us hope for the future.</p> <p class="text-body svelte-kza1zj"></p> <video controls poster="assets/videos/after_ww2.jpg" width="100%" data-svelte-h="svelte-u90dq6"><source src="assets/videos/after_ww2.mp4" type="video/mp4"></video><span class="text-extra-small" data-svelte-h="svelte-1hz5leb">Source: <a target="_blank" href="https://www.imdb.com/title/tt5723056/">Capital in the 21st Century (2019) by Justin Pemberton</a></span> <p class="text-body svelte-kza1zj" data-svelte-h="svelte-1hunb82">Thanks.</p> </section></main> <section class="svelte-1vhichp"><h3 class="text-extra-small" data-svelte-h="svelte-1tz2go">Data source</h3> <p class="text-extra-small" data-svelte-h="svelte-794apu">The data and analysis presented here are based on the work of more than 100
     researchers over four years, located on all continents, contributing to the
     World Inequality Database (WID.world), maintained by the World Inequality
@@ -101,7 +101,7 @@
 			
 			<script>
 				{
-					__sveltekit_snjuno = {
+					__sveltekit_1en6xbw = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/GLOBAL-INEQUALITY-STORY"
 					};
@@ -111,8 +111,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./app/immutable/entry/start.CIe_k5ZA.js"),
-						import("./app/immutable/entry/app.B5TuEm7K.js")
+						import("./app/immutable/entry/start.DRcTAQ0o.js"),
+						import("./app/immutable/entry/app.BJ-r-8p_.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
